[gd_scene load_steps=5 format=3 uid="uid://b81citgwgu0bn"]

[ext_resource type="Script" uid="uid://cksbhyh0pkqhu" path="res://scripts/Character/Character.gd" id="1_53v7d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0kroj"]
size = Vector2(8, 8)

[sub_resource type="Gradient" id="Gradient_53v7d"]
offsets = PackedFloat32Array(0, 0.107011, 0.472325, 0.638376, 0.817343)
colors = PackedColorArray(0.540351, 0.540351, 0.540351, 1, 0.302121, 0.302121, 0.302121, 1, 0.107654, 0.107654, 0.107654, 1, 0.0149088, 0.0149088, 0.0149088, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3i3nt"]
gradient = SubResource("Gradient_53v7d")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Character" type="CharacterBody2D"]
script = ExtResource("1_53v7d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 4)
shape = SubResource("RectangleShape2D_0kroj")

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(0, 0, 8, 0, 8, 8, 0, 8)

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="TimestampTimer" type="Timer" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(4, 4)
texture = SubResource("GradientTexture2D_3i3nt")

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="TimestampTimer" to="." method="_on_timestamp_timer_timeout"]
